--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,4 +26,4 @@ jobs:
         git config user.email elgafo.nakama@gmail.com
         git add README.md
         git diff --quiet && git diff --staged --quiet || git commit -m "[bot] Update README with latest info"
-        git push origin master
+        git push origin
