FIX: clean the code and modify readme template

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
   
   schedule:
-    - cron: "0 0 */2 * *"
+    - cron: "0 0 * * *"
 env:
   YOUTUBE_API_KEY: ${{ secrets.YOUTUBE_API_KEY }}
 jobs:
