--- a/.github/workflows/node2.js.yml
+++ b/.github/workflows/node2.js.yml
@@ -23,4 +23,4 @@ jobs:
           git config user.name "garu2"
           git add .
           git commit -m "[Update] Updates Snake Contribution Animation"
-          git push origin master
+          git push origin main
