--- a/.github/workflows/node2.js.yml
+++ b/.github/workflows/node2.js.yml
@@ -11,11 +11,13 @@ jobs:
       - name: Checkout Repo
         uses: actions/checkout@v2
       - name: Generate Snake
-        uses: Platane/snk@master
+        uses: Platane/snk/svg-only@v2
         with:
           github_user_name: garu2
-          gif_out_path: assets/github-snake.gif
-          svg_out_path: assets/github-snake.svg          
+          outputs: |
+            assets/github-snake.svg
+          #gif_out_path: assets/github-snake.gif
+          #svg_out_path: assets/github-snake.svg          
       # Commit the changes
       - name: Commit files
         run: |
