--- a/.github/workflows/node2.js.yml
+++ b/.github/workflows/node2.js.yml
@@ -12,7 +12,8 @@ jobs:
         uses: actions/checkout@v2
       - name: Generate Snake
         #uses: Platane/snk@master
-        uses: Platane/snk/svg-only@v2
+        #uses: Platane/snk/svg-only@v2
+        uses: Platane/snk@v3
         with:
           github_user_name: garu2
           outputs: |
